--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SendSalePriceList.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SendSalePriceList.html
@@ -1,9 +1,19 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<div vr-modalcontent ng-controller="WhS_BE_SendSalePriceListController" vr-loader="scopeModel.isLoading">
+    <vr-modalbody>
+        <vr-form name="formSendPriceList">
+            <vr-row>
+                <vr-columns width="fullrow">
+                    <vr-whs-be-salepricelist-grid on-ready="scopeModel.onSalePriceListGridReady"></vr-whs-be-salepricelist-grid>
+                </vr-columns>
+            </vr-row>
+        </vr-form>
+    </vr-modalbody>
+    <div>
+        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+            <div transclude-to="buttons">
+                <vr-button type="SendAll" formname="formSendPriceList" data-onclick="scopeModel.sendAll" vr-disabled="scopeModel.isSendAllButtonDisabled"></vr-button>
+                <vr-button type="Close" data-onclick="scopeModel.close"></vr-button>
+            </div>
+        </vr-actionbar>
+    </div>
+</div>
