--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRMail/VRMailMessageEvaluator.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRMail/VRMailMessageEvaluator.html
@@ -25,7 +25,7 @@
                     </vr-row>
                     <vr-row removeline>
                         <vr-columns width="fullrow" >
-                            <a href="" ng-click="scopeModel.downloadPriceList()">{{scopeModel.fileName}}</a>
+                            <a href="" ng-click="scopeModel.downloadAttachement()">{{scopeModel.fileName}}</a>
                         </vr-columns>
                     </vr-row>
                     <vr-row removeline>
