- set AccountPackage cache dependent on Package - set account Grid Pager to default pager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41524

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Account/Templates/AccountGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Account/Templates/AccountGridTemplate.html
@@ -3,7 +3,7 @@
 <vr-datagrid on-ready="scopeModel.onGridReady"
              datasource="scopeModel.accounts"
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
-             pagingtype="'PagingOnScroll'"
+             pagingtype="'Pager'"
              menuactions="scopeModel.menuActions"
              idfield="AccountId"
              defaultsortbyfieldname="'AccountId'" enableautoexport="true">
