set modal size to large
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41542

--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPInstance/BPInstanceTrackingModal.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPInstance/BPInstanceTrackingModal.html
@@ -1,4 +1,4 @@
-﻿<div vr-modalcontent width="'80%'" ng-controller="BusinessProcess_BP_TrackingModalController" vr-loader="isLoading">
+﻿<div vr-modalcontent size="large" ng-controller="BusinessProcess_BP_TrackingModalController" vr-loader="isLoading">
     <vr-modalbody>
         <vr-form name="formBPTrackingModal">
 
