Enhancement grid column width to gain more spaces
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41543

--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/CountryPreview/Templates/SupplierPriceListCountryPreviewGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/CountryPreview/Templates/SupplierPriceListCountryPreviewGridTemplate.html
@@ -5,7 +5,7 @@
              menuactions="[]">
 
     <vr-datagridcolumn headertext="'Country'" field="'CountryName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Country Change Type'" ng-show="showStatusIcon">
+    <vr-datagridcolumn headertext="'Change Type'" ng-show="showStatusIcon">
         <span>
             <vr-icon iconurl="dataItem.StatusIconUrl" tooltip="'Modified'"></vr-icon>
         </span>
