--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Views/SupplierPriceListPreview.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Views/SupplierPriceListPreview.html
@@ -1,5 +1,5 @@
-﻿<div vr-modalcontent ng-controller="WhS_SupPL_SupplierPriceListPreviewController" vr-loader="isLoading" width="'85%'">
-    <vr-modalbody maxheight="'700px'">
+﻿<div vr-modalcontent ng-controller="WhS_SupPL_SupplierPriceListPreviewController" vr-loader="isLoading" size="xlarge">
+    <vr-modalbody>
         <vr-form name="formSellNewZones" vr-loader="scopeModal.isLoading">
             <vr-tabs>
                 <vr-tab header="'Preview Data'">
