--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/ZoneServicesPreview/Templates/SupplierPriceListZoneServicesPreviewGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/ZoneServicesPreview/Templates/SupplierPriceListZoneServicesPreviewGridTemplate.html
@@ -9,7 +9,7 @@
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'SystemServicesBED'" type="'Datetime'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'EED'" field="'SystemServicesEED'" type="'Datetime'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Zone Service Change Type'">
+    <vr-datagridcolumn headertext="'Change Type'">
         <vr-icon iconurl="dataItem.ZoneServicesStatusIconUrl" tooltip="dataItem.ZoneServicesStatusIconTooltip" inline></vr-icon>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Imported Services'" field="'ImportedServiceIds'">
