--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
@@ -40,6 +40,10 @@
                                                              normal-col-num="6"
                                                              isrequired="true">
                 </vr-whs-be-pricelistextensionformat-selector>
+                <vr-whs-be-salepricelisttype-selector on-ready="onPriceListTypeSelectorReady"
+                                                      normal-col-num="6"
+                                                      isrequired="false">
+                </vr-whs-be-salepricelisttype-selector>
             </vr-row>
                 <vr-row>
                     <vr-columns width="1/2row">
