--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/VRObjectTypes/Templates/RetailAccountPropertyEvaluatorTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/VRObjectTypes/Templates/RetailAccountPropertyEvaluatorTemplate.html
@@ -1,8 +1,5 @@
-﻿
-
-<retail-be-account-genericfielddefinition-selector on-ready="scopeModel.onAccountGenericFieldDefinitionSelectorReady" 
-                                                   normal-col-num="6" 
-                                                   isrequired="true">
+﻿<retail-be-account-genericfielddefinition-selector on-ready="scopeModel.onAccountGenericFieldDefinitionSelectorReady"
+                                                   normal-col-num="6" isrequired="true">
 </retail-be-account-genericfielddefinition-selector>
 <vr-columns width="1/2row">
     <vr-switch value="scopeModel.useDescription" label="Use Description"></vr-switch>
