--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteGridTemplate.html
@@ -5,16 +5,16 @@
                  pagingtype="'PagingOnScroll'"
                  on-ready="onGridReady"
                  menuactions="gridMenuActions"
-                 defaultsortbyfieldname="'RoutingProductId'"
+                 defaultsortbyfieldname="'SaleZoneName'"
                  getrowstyle="getRowStyle" enableautoexport="true">
 
         <vr-datagridcolumn headertext="'Routing Product'" field="'RoutingProductName'" disablesorting fixedwidth="100"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Sale Zone'" field="'SaleZoneName'" disablesorting fixedwidth="200"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Sale Zone'" field="'SaleZoneName'" fixedwidth="200"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Services'" disablesorting="true" fixedwidth="60">
             <vr-whs-be-services-viewer on-ready="dataItem.onServiceViewerReady"></vr-whs-be-services-viewer>
         </vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Blocked'" field="'IsBlocked'" widthfactor="1" fixedwidth="50"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Route Options'" disablesorting >
+        <vr-datagridcolumn headertext="'Route Options'" disablesorting>
             <vr-whs-routing-zonerouteoptions on-ready="dataItem.onRouteOptionsReady"></vr-whs-routing-zonerouteoptions>
         </vr-datagridcolumn>
 
