--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/DataSourceGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/DataSourceGridTemplate.html
@@ -6,7 +6,7 @@
              idfield="Entity.DataSourceId">
 
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Type'" field="'AdapterInfo.Name'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Type'" field="'AdapterInfo.Title'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Scheduler Task Enabled'" field="'Entity.IsEnabled'">
         <vr-icon icontype="dataItem.Entity.IsEnabled"></vr-icon>
     </vr-datagridcolumn>
