--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
@@ -42,17 +42,17 @@
                 </vr-whs-be-pricelistextensionformat-selector>
                 <vr-whs-be-salepricelisttype-selector on-ready="onPriceListTypeSelectorReady"
                                                       normal-col-num="6"
-                                                      isrequired="false">
+                                                      isrequired="true">
                 </vr-whs-be-salepricelisttype-selector>
             </vr-row>
-                <vr-row>
-                    <vr-columns width="1/2row">
-                        <vr-textbox label="Maximum Rate" value="ctrl.maximumRate" minvalue="0" type="number" isrequired="true"></vr-textbox>
-                    </vr-columns>
-                    <vr-columns width="1/4row" withemptyline>
-                        <vr-label isvalue>{{ctrl.systemCurrencySymbol}}</vr-label>
-                    </vr-columns>
-                </vr-row>
+            <vr-row>
+                <vr-columns width="1/2row">
+                    <vr-textbox label="Maximum Rate" value="ctrl.maximumRate" minvalue="0" type="number" isrequired="true"></vr-textbox>
+                </vr-columns>
+                <vr-columns width="1/4row" withemptyline>
+                    <vr-label isvalue>{{ctrl.systemCurrencySymbol}}</vr-label>
+                </vr-columns>
+            </vr-row>
         </vr-tab>
 
         <vr-tab header="'Keywords'">
