set pricelist type = carrier account pricelist type by default
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41589

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
@@ -72,7 +72,7 @@
                     <vr-row>
                         <vr-whs-be-salepricelisttype-selector on-ready="onPriceListTypeSelectorReady"
                                                               normal-col-num="6"
-                                                              isrequired="false">
+                                                              isrequired="true">
                         </vr-whs-be-salepricelisttype-selector>
                     </vr-row>
                 </vr-tab>
