--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
@@ -47,10 +47,7 @@
             </vr-row>
             <vr-row>
                 <vr-columns width="1/2row">
-                    <vr-textbox label="Maximum Rate" value="ctrl.maximumRate" minvalue="0" type="number" isrequired="true"></vr-textbox>
-                </vr-columns>
-                <vr-columns width="1/4row" withemptyline>
-                    <vr-label isvalue>{{ctrl.systemCurrencySymbol}}</vr-label>
+                    <vr-textbox label="Maximum Rate ({{ctrl.systemCurrencySymbol}})" value="ctrl.maximumRate" minvalue="0" type="number" isrequired="true"></vr-textbox>
                 </vr-columns>
             </vr-row>
         </vr-tab>
