--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PurchaseAreaSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PurchaseAreaSettingsTemplate.html
@@ -10,7 +10,7 @@
     </vr-row>
     <vr-row>
         <vr-columns width="1/2row">
-            <vr-textbox label="Maximum Rate" value="ctrl.maximumRate" minvalue="0" type="number" isrequired="true"></vr-textbox>
+            <vr-textbox label="Max Cost Rate" value="ctrl.maximumRate" minvalue="0" type="number" isrequired="true"></vr-textbox>
         </vr-columns>
         <vr-columns width="1/4row" withemptyline>
             <vr-label isvalue>{{ctrl.systemCurrencySymbol}}</vr-label>
