--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
@@ -47,7 +47,7 @@
             </vr-row>
             <vr-row>
                 <vr-columns width="1/2row">
-                    <vr-textbox label="Maximum Rate ({{ctrl.systemCurrencySymbol}})" value="ctrl.maximumRate" minvalue="0" type="number" isrequired="true"></vr-textbox>
+                    <vr-textbox label="Max Sale Rate ({{ctrl.systemCurrencySymbol}})" value="ctrl.maximumRate" minvalue="0" type="number" isrequired="true"></vr-textbox>
                 </vr-columns>
             </vr-row>
         </vr-tab>
