--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Payment/Templates/PaymentConvertorEditor.html
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Payment/Templates/PaymentConvertorEditor.html
@@ -6,6 +6,11 @@
                                                       isrequired="true">
     </vr-genericdata-businessentitydefinition-selector>
 </vr-columns>
+<retail-be-accountpartdefinition-selector on-ready="scopeModel.onCompanyProfileDefinitionSelectorReady"
+                                          normal-col-num="6"
+                                          customlabel="Company Extended Settings Part"
+                                          isrequired="true">
+</retail-be-accountpartdefinition-selector>
 <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" normal-col-num="6"></vr-common-currency-selector>
 <vr-columns width="1/2row">
     <vr-textbox value="scopeModel.sourceIdColumn" label="Source Id Column" isrequired="true"></vr-textbox>
