--- a/Vanrise/Code/Vanrise.NumberingPlan.Web/VR_NumberingPlan/Directives/CodePreview/Templates/CodePreparationCodePreviewGridTemplate.html
+++ b/Vanrise/Code/Vanrise.NumberingPlan.Web/VR_NumberingPlan/Directives/CodePreview/Templates/CodePreparationCodePreviewGridTemplate.html
@@ -9,8 +9,8 @@
     <vr-datagridcolumn headertext="'Code Change Type'">
         <vr-icon iconurl="dataItem.codeStatusIconUrl" tooltip="dataItem.codeStatusIconTooltip" inline></vr-icon>
     </vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Datetime'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Datetime'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Date'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Moved From'" type="'Text'">
         <span ng-show="dataItem.showMovedFrom">
             {{dataItem.Entity.RecentZoneName}}
