Deal Integration with Pricing process
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41622

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/Templates/SwapDealOutboundGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/Templates/SwapDealOutboundGridTemplate.html
@@ -3,6 +3,7 @@
 
 <vr-datagrid datasource="ctrl.datasource" norowhighlightonclick="true" menuactions="gridMenuActions" maxheight="300px"
              on-ready="onGridReady"  hidegridmenu>
+    <vr-datagridcolumn headertext="'Group Nb'" field="'ZoneGroupNumber'" widthfactor="2" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Group Name'" field="'Name'" widthfactor="10" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Volume(Minutes)'" field="'Volume'" type="'Number'" widthfactor="10" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Rate'" field="'Rate'" type="'Number'" widthfactor="5" disablesorting></vr-datagridcolumn>    
