--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/VolumeCommitment/Templates/VolumeCommitmentItemsManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/VolumeCommitment/Templates/VolumeCommitmentItemsManagement.html
@@ -3,6 +3,7 @@
 <vr-validator validate="ctrl.isValid()">
     <vr-datagrid datasource="ctrl.datasource" norowhighlightonclick="true" menuactions="gridMenuActions" maxheight="300px"
                  on-ready="onGridReady"  ondeleterow="ctrl.removeItem" hidegridmenu>
+        <vr-datagridcolumn headertext="'Group Nb'" field="'Entity.ZoneGroupNumber'" widthfactor="1" disablesorting></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" widthfactor="10" disablesorting></vr-datagridcolumn>
     </vr-datagrid>
 </vr-validator>
