--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/SwapDeal/SwapDealEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/SwapDeal/SwapDealEditor.html
@@ -4,9 +4,10 @@
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row>
-                        <vr-whs-be-carrieraccount-selector selectedvalues="scopeModel.carrierAccount" on-ready="scopeModel.onCarrierAccountSelectorReady" normal-col-num="4" getexchangecarriers
-                                                           isrequired="true" hideremoveicon="true" onselectionchanged="scopeModel.onCarrierAccountSelectionChanged"></vr-whs-be-carrieraccount-selector>
-
+                        <span vr-disabled="scopeModel.disabelType">
+                            <vr-whs-be-carrieraccount-selector selectedvalues="scopeModel.carrierAccount" on-ready="scopeModel.onCarrierAccountSelectorReady" normal-col-num="4" getexchangecarriers
+                                                               isrequired="true" hideremoveicon="true" onselectionchanged="scopeModel.onCarrierAccountSelectionChanged"></vr-whs-be-carrieraccount-selector>
+                        </span>
                         <vr-columns width="1/3row">
                             <vr-select label="Deal Contract"
                                        datasource="scopeModel.contractTypes"
@@ -47,7 +48,7 @@
                         <vr-columns width="fullrow">
                             <vr-textbox label="Description" value="scopeModel.description" isrequired="true"></vr-textbox>
                         </vr-columns>
-                        
+
                     </vr-row>
                 </vr-tab>
                 <vr-tab header="'Selling Part'" vr-loader="scopeModel.isLoadingInbound">
@@ -63,7 +64,7 @@
                     <vr-row>
                         <vr-columns width="fullrow">
                             <vr-validator validate="scopeModel.validateSwapDealOutbounds()">
-                              
+
                                 <vr-whs-deal-swapdealoutbound-grid on-ready="scopeModel.onSwapDealOutboundDirectiveReady" ng-show="scopeModel.carrierAccount"></vr-whs-deal-swapdealoutbound-grid>
                             </vr-validator>
                         </vr-columns>
