enhancment on sending email implementing callback
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41630

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRMail/VRMailMessageEvaluator.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRMail/VRMailMessageEvaluator.html
@@ -40,8 +40,8 @@
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="SendEmail" formname="emailEvaluatorForm" data-onclick="scopeModel.sendEmail"></vr-button>
-                <vr-button type="Close" data-onclick="scopeModel.close"></vr-button>
+                <vr-button type="SendEmail" formname="emailEvaluatorForm" data-onclick="scopeModel.confirmEmail"></vr-button>
+                <vr-button type="Cancel" data-onclick="scopeModel.close"></vr-button>
             </div>
         </vr-actionbar>
     </div>
