--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchMapping/SwitchMappingManagement.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchMapping/SwitchMappingManagement.html
@@ -1,23 +1,12 @@
 ﻿<vr-panel ng-controller="NP_IVSwitch_SwitchMappingManagementController">
     <vr-form name="formFilter">
-        <!--<div ng-hide="filtersectioncollapsed">
-            <vr-row removeline>
+        <div ng-hide="filtersectioncollapsed">
+            <vr-row removeline>        
                 <vr-columns width="normal">
-                    <vr-whs-be-carrieraccount-selector getcustomers
-                                                       normal-col-num="20"
-                                                       on-ready="oncarrieraccountdirectiveready"
-                                                       selectedvalues="selectedcustomers"
-                                                       isrequired="true">
-                    </vr-whs-be-carrieraccount-selector>
-                </vr-columns>
-                <vr-columns>
-                    <vr-textbox label="code prefix" value="codeprefix" type="number"></vr-textbox>
-                </vr-columns>
-                <vr-columns>
-                    <vr-textbox label="top" value="toprecords" type="number" isrequired></vr-textbox>
+                    <vr-textbox label="Name" value="name"></vr-textbox>
                 </vr-columns>
             </vr-row>
-        </div>-->
+        </div>
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
