add fonts-clolors classes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41670

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -3242,6 +3242,14 @@ vr-overall-widget  .list-group-item {
 }
 /* end vr-overall-widget*/
 
+
+
+/* start fonts-colors*/
+.danger-font{
+    color: #ff0000 
+}
+/* end fonts-colors*/
+
 /* start vr-tile*/
 .vr-tile{
     width:100%;
