--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/MainExtensions/VRObjectTypes/Templates/VRDataRecordObjectFieldTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/MainExtensions/VRObjectTypes/Templates/VRDataRecordObjectFieldTemplate.html
@@ -1,6 +1,4 @@
-﻿
-
-<vr-columns width="1/2row">
+﻿<vr-columns width="1/2row">
     <vr-genericdata-datarecordtypefields-selector on-ready="scopeModel.onDataRecordTypeFieldSelectorReady"></vr-genericdata-datarecordtypefields-selector>
 </vr-columns>
 <vr-columns width="1/2row">
