--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/AccountType/Part/Runtime/Templates/AccountTypePersonalInfoPartRuntimeTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/AccountType/Part/Runtime/Templates/AccountTypePersonalInfoPartRuntimeTemplate.html
@@ -8,7 +8,7 @@
             <vr-textbox value="scopeModel.lastName" label="Last Name"></vr-textbox>
         </vr-columns>
         <vr-columns width="1/2row">
-            <vr-textbox value="scopeModel.gender" label="Gender"></vr-textbox>
+            <vr-common-gender-selector on-ready="scopeModel.onGenderSelectorReady"></vr-common-gender-selector>
         </vr-columns>
         <vr-columns width="1/2row">
             <span>
