--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRMail/Templates/VRObjectTypePropertyGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRMail/Templates/VRObjectTypePropertyGridTemplate.html
@@ -2,7 +2,7 @@
              datasource="scopeModel.objectTypeProperties"
              menuactions="scopeModel.menuActions"
              pagingtype="'PagingOnScroll'"
-             hidegridmenu normalcell>
+             hidegridmenu normalcell maxheight="300px">
     <vr-datagridcolumn headertext="'Name'" type="'Text'" field="'Name'" widthfactor="1" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Description'" type="'Text'" field="'Description'" widthfactor="1" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Value Expression'" type="'Text'" field="'ValueExpression'" widthfactor="2" disablesorting></vr-datagridcolumn>
