--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/SwapDeal/SwapDealEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/SwapDeal/SwapDealEditor.html
@@ -5,8 +5,10 @@
                 <vr-tab header="'Definition'">
                     <vr-row>
                         <span vr-disabled="scopeModel.disabelType">
-                            <vr-whs-be-carrieraccount-selector selectedvalues="scopeModel.carrierAccount" on-ready="scopeModel.onCarrierAccountSelectorReady" normal-col-num="4" getexchangecarriers
-                                                               isrequired="true" hideremoveicon="true" onselectionchanged="scopeModel.onCarrierAccountSelectionChanged"></vr-whs-be-carrieraccount-selector>
+                            <vr-whs-be-carrieraccount-selector onselectionchanged="scopeModel.onCarrierAccountSelectionChanged" on-ready="scopeModel.onCarrierAccountSelectorReady"
+                                                               selectedvalues="scopeModel.carrierAccount" normal-col-num="4" isrequired="true"
+                                                               hideremoveicon="true" getexchangecarriers>
+                            </vr-whs-be-carrieraccount-selector>
                         </span>
                         <vr-columns width="1/3row">
                             <vr-select label="Deal Contract"
@@ -28,7 +30,6 @@
                                        hideremoveicon="true">
                             </vr-select>
                         </vr-columns>
-
                     </vr-row>
                     <vr-row>
                         <vr-columns width="1/3row">
@@ -37,6 +38,7 @@
                         <vr-columns width="1/3row">
                             <vr-datetimepicker label="End Date" type="date" value="scopeModel.endDate" isrequired="true" customvalidate="scopeModel.validateDatesRange()"></vr-datetimepicker>
                         </vr-columns>
+                        <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectReady" isrequired="true" normal-col-num="4"></vr-common-currency-selector>
                         <vr-columns width="1/3row">
                             <vr-textbox label="Grace Period" value="scopeModel.gracePeriod" type="number" decimalprecision="0" isrequired="true" customvalidate="scopeModel.validateGracePeriod()"></vr-textbox>
                         </vr-columns>
@@ -48,7 +50,6 @@
                         <vr-columns width="fullrow">
                             <vr-textbox label="Description" value="scopeModel.description" isrequired="true"></vr-textbox>
                         </vr-columns>
-
                     </vr-row>
                 </vr-tab>
                 <vr-tab header="'Selling Part'" vr-loader="scopeModel.isLoadingInbound">
