adding currency and currency exchange rate to NP and RP
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41742

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRateChangeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRateChangeTemplate.html
@@ -4,7 +4,8 @@
              pagingtype="'PagingOnScroll'"
              idfield="ZoneName">
     <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Rate'" field="'Rate'" type="'Number'" numberprecision="'LongPrecision'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Rate'" field="'Rate'" type="'Number'" numberprecision="'LongPrecision'" fixedwidth="'70'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Currency'" field="'CurrencySymbol'" type="'Text'" fixedwidth="'70'"></vr-datagridcolumn>
     <vr-datagridcolumn fixedwidth="'30'">
         <vr-icon icontype="dataItem.RateChangeTypeIconType" iconurl="dataItem.RateChangeTypeIcon"
                  tooltip="dataItem.RateChangeTypeIconTooltip" inline>
