--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Directives/RatePreview/Templates/CodePreparationRatePreviewGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Directives/RatePreview/Templates/CodePreparationRatePreviewGridTemplate.html
@@ -8,6 +8,7 @@
     <vr-datagridcolumn headertext="'Owner Type'" field="'OwnerTypeDescription'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Owner Name'" field="'OwnerName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Rate'" field="'Entity.Rate'" type="'Number'" numberprecision="'LongPrecision'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Currency'" field="'CurrencySymbol'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Date'"></vr-datagridcolumn>
 
