implementing multinet invoice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41768

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/RDLCReport/Templates/RDLCSubReportEditor.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/RDLCReport/Templates/RDLCSubReportEditor.html
@@ -29,6 +29,9 @@
                          </vr-columns>
                     </vr-row>
                 </vr-tab>
+                <vr-tab header="'SubReports'">
+                    <vr-invoicetype-gridactionsettings-openrdlcreport-reportsettings-subreports on-ready="scopeModel.onSubreportDirectiveReady"></vr-invoicetype-gridactionsettings-openrdlcreport-reportsettings-subreports>
+                </vr-tab>
                 <vr-tab header="'Condition'">
                     <vr-genericdata-recordfilter on-ready="scopeModel.onRecordFilterReady"></vr-genericdata-recordfilter>
                 </vr-tab>
