--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Definition/InvoiceTypeEditor.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Definition/InvoiceTypeEditor.html
@@ -103,6 +103,13 @@
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
+                <vr-tab header="'ItemSet Name Storage Rule'">
+                    <vr-row removeline>
+                        <vr-columns width="fullrow">
+                            <vr-invoicetype-itemsetnamestoragerules-management on-ready="scopeModel.onItemSetNameStorageRuleReady"></vr-invoicetype-itemsetnamestoragerules-management>
+                        </vr-columns>
+                    </vr-row>
+                </vr-tab>
                 <vr-tab header="'Security'">
                     <vr-row>
                         <vr-columns width="fullrow">
