--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/InvoiceDataSourceSettings/MainExtensions/DataSource/Templates/ItemsDataSourceSettings.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/InvoiceDataSourceSettings/MainExtensions/DataSource/Templates/ItemsDataSourceSettings.html
@@ -1,5 +1,15 @@
 ﻿<vr-row>
     <vr-columns width="1/3row">
+        <vr-select datasource="scopeModel.itemSetNamesCompareOperators"
+                   datatextfield="description"
+                   datavaluefield="value"
+                   selectedvalues="scopeModel.selectedItemSetNameCompareOperator"
+                   label="Operator"
+                   isrequired="true">
+        </vr-select>
+    </vr-columns>
+
+    <vr-columns width="1/3row">
         <vr-textbox label="Itemset Name" value="ctrl.itemsetName" customvalidate="ctrl.disableAddItem()"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row" withemptyline>
