--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/RDLCReport/Templates/RDLCSubReportsManagement.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/RDLCReport/Templates/RDLCSubReportsManagement.html
@@ -1,8 +1,8 @@
-﻿<vr-button type="Add" data-onclick="ctrl.addSubReport" standalone></vr-button>
+﻿<vr-button type="Add" data-onclick="ctrlDataSources.addSubReport" standalone></vr-button>
 
-<vr-validator validate="ctrl.isValid()">
-    <vr-datagrid datasource="ctrl.datasource" norowhighlightonclick="true" menuactions="gridMenuActions" maxheight="300px"
-                 on-ready="onGridReady" enabledraggablerow="true" ondeleterow="    ctrl.removeSubReport" hidegridmenu>
+<vr-validator validate="ctrlDataSources.isValid()">
+    <vr-datagrid datasource="ctrlDataSources.datasource" norowhighlightonclick="true" menuactions="gridMenuActions" maxheight="300px"
+                 on-ready="onGridReady" enabledraggablerow="true" ondeleterow="    ctrlDataSources.removeSubReport" hidegridmenu>
         <vr-datagridcolumn headertext="'Sub Report Name'" field="'Entity.SubReportName'" widthfactor="10" disablesorting></vr-datagridcolumn>
     </vr-datagrid>
 </vr-validator>
