--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
@@ -44,7 +44,7 @@
                         <vr-columns colnum="6">
                             <vr-datagrid on-ready="scopeModel.onGridReady"
                                          datasource="scopeModel.topCustomers">
-                                <vr-datagridcolumn headertext="'Customer Name'" field="'CustomerName'" ></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Customer Name'" field="'CustomerName'" isclickable="true" onclicked="scopeModel.viewLiveCdr"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'Attempts'" field="'Attempts'" initiallyhidden="true" type="'Number'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'Connected'" field="'CountConnected'" initiallyhidden="true" type="'Number'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
 
@@ -80,7 +80,7 @@
                             <vr-datagrid on-ready="scopeModel.onGridReady"
                                          datasource="scopeModel.topSuppliers">
                                
-                                <vr-datagridcolumn headertext="'Supplier Name'" field="'SupplierName'"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Supplier Name'" field="'SupplierName'" isclickable="true" onclicked="scopeModel.viewLiveCdr"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'Attempts'" field="'Attempts'" initiallyhidden="true" type="'Number'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'Connected'" field="'CountConnected'" initiallyhidden="true" type="'Number'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'ASR %'" field="'PercConnected'" type="'Number'" numberprecision="'NoDecimal'" getcolor="scopeModel.getPercConnectedColor"></vr-datagridcolumn>
