Implementing parent of parent datasource
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41782

--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/CompanySubscriberInvoiceReport.rdlc
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/CompanySubscriberInvoiceReport.rdlc
@@ -2169,7 +2169,6 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
               </TablixCells>
@@ -2443,8 +2442,8 @@ Please Ignore the Previous Balance amount if you have already paid that amount.<
                   <CellContents>
                     <Rectangle Name="Rectangle1">
                       <ReportItems>
-                        <Subreport Name="SubscriberInvoiceItemsReportName">
-                          <ReportName>SubscriberInvoiceItemsReport</ReportName>
+                        <Subreport Name="CompanyBranchReportName">
+                          <ReportName>CompanyBranchReport</ReportName>
                           <Parameters>
                             <Parameter Name="SubscriberName">
                               <Value>=Fields!AccountId.Value</Value>
